# PeTTa

./: .gitignore  AGENTS.md  CLAW.md  Cargo.toml  MANIFEST.in  Makefile.toml  README.md  TODO.md  TODO2.md  TODO3.md  build.sh  run.sh  run_omegaclaw.metta  run_with_cpu_limit.sh  rustfmt.toml  setup.py  test.sh  test_typecheck.sh
.github/ci/: Dockerfile
.github/workflows/: ci.yml
.myclaw/: Dockerfile  environment.json
benches/: benchmarks.rs
examples/: add_atom_fun_space.metta  atomops.metta  builin_types.metta  case_empty.metta  computebudget_limit.metta  csp_library.metta  curry.metta  determinism.metta  determinism_clause_partition.metta  determinism_closure_param.metta  determinism_closure_through_fold.metta  determinism_lco.metta  fail_andthen_nonbool.metta  fail_case_output_mismatch.metta  fail_catch_output_mismatch.metta  fail_collapse_mixed_list.metta  fail_collapse_output_mismatch.metta  fail_conditional_cut_overlap.metta  fail_det_closure_param.metta  fail_det_nondet_through_fold.metta  fail_det_undeclared_callee.metta  fail_determinism_body.metta  fail_determinism_overlap.metta  fail_eval_quote_output_mismatch.metta  fail_foldall_output_mismatch.metta  fail_ground_clause_output_conflict.metta  fail_if_output_mismatch.metta  fail_import_type_error.metta  fail_import_type_error_module.metta  fail_infix_arrow.metta  fail_manual_call_type_error.metta  fail_match_output_mismatch.metta  fail_mutex_output_mismatch.metta  fail_newtype_role_mismatch.metta  fail_non_parametric_output.metta  fail_nonparametric_param.metta  fail_once_output_mismatch.metta  fail_overload_clause_mismatch.metta  fail_progn_output_mismatch.metta  fail_quoted_literal_output.metta  (+115 more)
examples/imports/: import_error_broken.metta  import_signature_preload_dep.metta
examples/imports/git_import_core_fixture/: test.metta
examples/imports/import_order/: defines.metta  index.metta  uses.metta
examples/imports/overhaul/: cycle_a.metta  cycle_b.metta  duplicate.metta  space_payload.metta
examples/imports/relative/: root.metta  second.metta
examples/imports/relative/subdir/: parent.metta  python_helper.py  sibling.metta
examples_typecheck/: fail_call_output_mismatch.metta  fail_determinism_overlap.metta  fail_forall_output_mismatch.metta  fail_hyperpose_output_mismatch.metta  fail_inferred_output_conflict.metta  fail_list_type_mismatch.metta  fail_map_output_mismatch.metta  fail_strict_missing_type.metta  fail_superpose_output_mismatch.metta  type_dispatch_matrix.sh  type_overload_resolved.metta  type_runtime_output_fallback.metta  type_single_monomorphic_resolved.metta
lib/: lib_builtin_types.metta  lib_computebudget.metta  lib_csp.md  lib_csp.metta  lib_csp.pl  lib_datetime.metta  lib_datetime.pl  lib_gitimport.pl  lib_he.metta  lib_import.metta  lib_import.pl  lib_llm.metta  lib_logger.metta  lib_logger.pl  lib_memo.metta  lib_memo.pl  lib_memo_doc.md  lib_mm2.metta  lib_nars.metta  lib_patrick.metta  lib_pln.metta  lib_roman.metta  lib_snapshot.metta  lib_snapshot.pl  lib_spaces.metta  lib_tabling.metta  lib_truth.metta  lib_types.metta  lib_vector.metta  lib_zar.metta
lib/omegaclaw/: lib_omegaclaw.metta
lib/omegaclaw/src/: channels.metta  loop.metta  memory.metta  utils.metta
prolog/: README.md  filereader.pl  main.pl  metta.pl  omegaclaw_ext.pl  parser.pl  server_loop.pl  spaces.pl  specializer.pl  translator.pl  utils.pl
python/: helper.pl  petta.py  pyproject.toml
python/petta/: __init__.py  cli.py
python/tests/: test_cli.py  test_cli_import_errors.py  test_import_overhaul.py  test_imports.py  test_petta.py
rust/pathmap/: Cargo.toml
rust/pathmap-derive/: Cargo.toml
rust/pathmap-derive/src/: lib.rs
rust/pathmap-macros/: Cargo.toml
rust/pathmap-macros/src/: lib.rs
rust/pathmap/src/: alloc.rs  arena_compact.rs  dependent_zipper.rs  empty_zipper.rs  experimental.rs  gxhash.rs  lib.rs  merkleization.rs  morphisms.rs  overlay_zipper.rs  prefix_zipper.rs  ring.rs  viz.rs  write_zipper.rs  zipper_head.rs
rust/pathmap/src/experimental/: serialization.rs
rust/pathmap/src/trie_core/: empty.rs  map.rs  mod.rs  node.rs  ref.rs  tiny.rs
rust/pathmap/src/utils/: ints.rs  mod.rs
rust/pathmap/src/utils/debug/: mod.rs  morphism_debug.rs
rust/src/: benchmark.rs  cli.rs  differential.rs  gxhash.rs  hash_fallback.rs  lib.rs  lib_tests.rs  main.rs  observability.rs  profiler.rs  reliability.rs  repl.rs  viz.rs
rust/src/engine/: backends.rs  client.rs  config.rs  errors.rs  formatters.rs  mod.rs  mork_engine.rs  protocol.rs  server.rs  subprocess.rs  values.rs  version.rs
rust/src/mork/: mod.rs  pure.rs  sinks.rs  sources.rs  space.rs  stub.rs
rust/src/parser/: mod.rs
rust/src/pathmap/: PHASE4_PROGRESS_REPORT.md  alloc.rs  arena_compact.rs  bridge_node.rs  counters.rs  dense_byte_node.rs  dependent_zipper.rs  empty_node.rs  empty_zipper.rs  experimental.rs  line_list_node.rs  merkleization.rs  mod.rs  morphisms.rs  old_cursor.rs  overlay_zipper.rs  paths_serialization.rs  paths_serialization_nightly.rs  poly_zipper.rs  prefix_zipper.rs  product_zipper.rs  random.rs  ring.rs  tiny_node.rs  trie_map.rs  trie_node.rs  trie_ref.rs  viz.rs  write_zipper.rs  zipper.rs  zipper_head.rs  zipper_tracking.rs
rust/src/petta_parser/: mod.rs
rust/src/utils/: colors.rs  mod.rs
rust/src/ws_ext/: channel.rs  embed.rs  helpers.rs  irc.rs  llm.rs  mod.rs  protocol.rs  search.rs  vector_store.rs
src/: cache.pl  ext_points.pl  filereader.pl  gitimport.pl  loadstate.pl  main.pl  memo_hooks.pl  metta.pl  parser.pl  spaces.pl  specializer.pl  translator.pl  translator_backup.pl  translator_latest_garbage.pl  translator_new.pl  typecheck.pl
tests/: auto_ci.rs  differential.rs  examples.rs  protocol_integration.rs  test_git_import.sh  test_packaged_cli.sh  test_utils.rs  ws_extension.rs
tests/regression/: repro1_failed_specialization_memo.metta  repro2_exponential_failed_specialization.metta  repro3_failed_specialization_self_leak.metta  repro4_variant_normalization.metta  repro5_pybool_if_condition.metta  test_git_dependency.sh  test_specializer_regressions.sh
(+35 files in other folders)
