[package]
name = "petta"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Production MeTTa runtime with dual backends (Prolog/MORK)"
license = "MIT"
repository = "https://github.com/patham9/petta"
keywords = ["metta", "logic", "prolog", "agi"]

[workspace]
resolver = "2"
members = [".", "rust/pathmap-macros"]
default-members = ["."]

[[bin]]
name = "petta"
path = "rust/src/main.rs"

[lib]
name = "petta"
path = "rust/src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"

[dependencies]
# Core dependencies
tempfile = "3"
serde_json = "1.0"
tracing = "0.1"
nom = "8"
clap = { version = "4.5", features = ["derive"], optional = true }
thiserror = "1.0"
indexmap = "2.0"

# PathMap
pathmap-macros = { path = "rust/pathmap-macros" }
dyn-clone = "1.0"
arrayvec = "0.7"
smallvec = { version = "1.13", features = ["union"] }
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3", "const_xxh3"] }
memmap2 = "0.9"

# Optional: gxhash for fast hashing (requires AES/SSE2)
gxhash = { version = "3.5", optional = true }

# MORK backend (optional, requires nightly Rust)
typed-arena = { version = "2.0", optional = true }
regex = { version = "1.10", optional = true }
memchr = { version = "2.7", optional = true }
futures = { version = "0.3", optional = true }
itertools = { version = "0.14", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
subprocess = { version = "0.2", optional = true }
libz-ng-sys = { version = "1.1", optional = true }

# Optional features
rustyline = { version = "14", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
scraper = { version = "0.20", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
once_cell = "1.0"
dirs = { version = "6.0", optional = true }
chrono = "0.4.44"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tungstenite = "0.24"

[features]
default = ["repl", "clap", "websocket"]
fast-hasher = ["dep:gxhash"]
mork = ["serialization", "dep:typed-arena", "dep:regex", "dep:memchr", "dep:futures", "dep:itertools", "dep:base64", "dep:hex", "dep:subprocess"]
repl = ["dep:rustyline", "dep:dirs"]
clap = ["dep:clap"]
websocket = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:serde", "dep:reqwest", "dep:scraper"]
parallel = []
profiling = []
bench = []
async = ["dep:tokio"]
observability = ["dep:tracing-subscriber"]
reliability = ["dep:tokio"]
serialization = ["dep:libz-ng-sys"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("gxhash", "serialization", "mork", "repl", "clap", "websocket"))'] }
