[package]
name = "pathmap-macros"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Procedural macros for the pathmap crate"
repository = "https://github.com/patham9/petta"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
